Fixed input content overflow behind submit button.

--- a/public/sass/components/components.form.scss
+++ b/public/sass/components/components.form.scss
@@ -25,7 +25,7 @@
 .c-input-oval {
   width: 100%;
   height: auto;
-  padding: 1.2rem;
+  padding: 1.2rem 4.2rem 1.2rem 1.2rem;
   border-radius: 1.5rem;
   font-size: 1.4rem;
   color: var(--color-text-silver-dark);
