--- a/public/sass/components/components.username-form.scss
+++ b/public/sass/components/components.username-form.scss
@@ -61,7 +61,6 @@
     -webkit-appearance: none;
     appearance: none;
     background: #fff url('/img/arrow_circle_up.svg') right center no-repeat;
-    padding-right: 20px;
     cursor: pointer;
   }
 }
